# nxvfxvst

./: .gitignore  CMakeLists.txt  CMakePresets.json  EventFacade.hpp  LICENSE  Readme.md  main.cpp  test_main.cpp  vcpkg-configuration.json  vcpkg.json
app/: AudioGenerator.hpp  EventFacadeApp.cpp  EventFacadeApp.hpp  MidiGenerator.hpp  SerialGenerator.hpp  SineWaveGenerator.hpp  version.hpp
cmake/: GitVersion.cmake
data/: DataObjects.hpp
helpers/: ColorHelper.hpp  CommonHeaders.hpp  Definitions.hpp  LineHelper.hpp  MathHelper.hpp  MenuHelper.hpp  MidiHelper.hpp  SerialHelper.hpp  convert_headers.py
log/: Logger.hpp
models/: ChannelPipeline.cpp  ChannelPipeline.hpp  EventRecorder.hpp  IAudioVisualizer.hpp  IEncoder.hpp  IParticle.hpp  IParticleBehavior.hpp  IParticleGenerator.hpp  IParticleLayout.hpp  IParticleModifier.hpp  ISerializable.hpp  IShader.hpp  InterfaceTypes.hpp  Interfaces.hpp  ModifierPipeline.cpp  ModifierPipeline.hpp  MultichannelPipeline.cpp  MultichannelPipeline.hpp  ParticleBehaviorPipeline.cpp  ParticleBehaviorPipeline.hpp  ParticleGeneratorManager.hpp  ParticleLayoutManager.cpp  ParticleLayoutManager.hpp  ParticlePipeline.hpp  ScopedRenderContext.hpp  ShaderMacros.hpp  ShaderManager.hpp  ShaderPipeline.cpp  ShaderPipeline.hpp
models/audio/: BarSpectrumVisualizer.hpp  FFTProcessor.hpp  FFTScaler.hpp  IFFTResult.hpp  MaxEnergyTracker.hpp  PlotLineImGuiVisualizer.hpp  PlotLinesVisualizer.hpp  PlotlineVisualizer.hpp  RingBarVisualization.hpp  RingParticleVisualizer.hpp  RingPlotVisualizer.hpp
models/channel/: AudioChannelPipeline.hpp  ChannelPipeline.hpp  MidiChannelPipeline.cpp  MidiChannelPipeline.hpp
models/data/: GlobalInfo_t.hpp  Midi_t.hpp  ParticleData_t.hpp  ParticleLayoutData_t.hpp  ParticleLineData_t.hpp  PipelineContext.hpp  TimedParticle_t.hpp
models/easings/: CumulativeEasing.hpp  Easings.hpp  EasingsBase.hpp  PercentageEasing.hpp  TimeEasing.hpp
models/encoder/: EncoderFactory.hpp  FFMpegEncoder.cpp  FFMpegEncoder.hpp  FrameRateLock.hpp  RawEncoder.hpp  RawRGBAEncoder.cpp  RawRGBAEncoder.hpp
models/modifier/: FreeFallModifier.hpp  KnnMeshModifier.hpp  MirrorModifier.cpp  MirrorModifier.hpp  ParticleFullMeshLineModifier.cpp  ParticleFullMeshLineModifier.hpp  ParticleSequentialLineModifier.cpp  ParticleSequentialLineModifier.hpp  PassthroughParticleModifier.hpp  PerlinDeformerModifier.cpp  PerlinDeformerModifier.hpp  RingZoneMeshModifier.cpp  RingZoneMeshModifier.hpp  TestModifier.hpp  TrailEchoModifier.hpp
models/particle/: EllipticalLayout.cpp  EllipticalLayout.hpp  EmptyParticleLayout.hpp  FractalRingLayout.cpp  FractalRingLayout.hpp  GoldenSpiralLayout.cpp  GoldenSpiralLayout.hpp  LSystemCurveLayout.cpp  LSystemCurveLayout.hpp  LissajousCurveLayout.cpp  LissajousCurveLayout.hpp  OrbitRingLayout.hpp  ParticleConsumer.hpp  ParticleFullMeshLineModifier.hpp  ParticleLayoutBase.hpp  ParticleSequentialLineModifier.hpp  PassthroughParticleModifier.hpp  RadialBurstLayout.hpp  RandomParticleLayout.cpp  RandomParticleLayout.hpp  SpiralParticleLayout.cpp  SpiralParticleLayout.hpp  TestParticleLayout.hpp  TimedParticle.hpp
models/particle/behavior/: ColorMorphBehavior.cpp  ColorMorphBehavior.hpp  EnergyFlowFieldBehavior.hpp  FreeFallBehavior.cpp  FreeFallBehavior.hpp  JitterBehavior.cpp  JitterBehavior.hpp  MagneticAttractorBehavior.cpp  MagneticBehavior.cpp  MagneticBehavior.hpp  RadialSpreaderBehavior.cpp  RadialSpreaderBehavior.hpp  WaveBehavior.hpp
models/particle/generator/: BurstRingGenerator.hpp  CircleParticleGenerator.hpp  ParticleGeneratorBase.hpp  RingGenerator.hpp  StarburstParticleGenerator.hpp
models/particle/layout/: EllipticalLayout.cpp  EllipticalLayout.hpp  EmptyParticleLayout.hpp  FractalRingLayout.cpp  FractalRingLayout.hpp  GoldenSpiralLayout.cpp  GoldenSpiralLayout.hpp  LSystemCurveLayout.cpp  LSystemCurveLayout.hpp  LissajousCurveLayout.cpp  LissajousCurveLayout.hpp  ParticleLayoutBase.hpp  PlotLineVisualizer.hpp  RandomParticleLayout.cpp  RandomParticleLayout.hpp  RingParticleVisualizer.hpp  SpiralEchoVisualizer.hpp  SpiralParticleLayout.cpp  SpiralParticleLayout.hpp  TessellatedGridVisualizer.hpp  VortexSinkVisualizer.hpp
models/particle/particles/: BurstRingParticle.hpp  CircleParticle.hpp  RingParticle.hpp  StarburstParticle.hpp  TimedParticleBase.hpp
models/shader/: BlenderShader.cpp  BlenderShader.hpp  BloomShader.hpp  BlurShader.cpp  BlurShader.hpp  ColorShader.cpp  ColorShader.hpp  DensityHeatMapShader.cpp  DensityHeatMapShader.hpp  DualKawaseBlurShader.cpp  DualKawaseBlurShader.hpp  FeedbackShader.cpp  FeedbackShader.hpp  GlitchShader.hpp  KaleidoscopeShader.cpp  KaleidoscopeShader.hpp  LayeredGlitchShader.cpp  LayeredGlitchShader.hpp  PulseShader.hpp  RippleShader.cpp  RippleShader.hpp  RumbleShader.cpp  RumbleShader.hpp  ShockBloomShader.cpp  ShockBloomShader.hpp  SmearShader.cpp  SmearShader.hpp  StrobeShader.cpp  StrobeShader.hpp  TransformShader.cpp  TransformShader.hpp
models/shader/easings/: CumulativeEasing.hpp  EasingAssignmentComponent.hpp  TimeEasing.cpp  TimeEasing.hpp
resources/: embedded_font.hpp
shapes/: BPMSelector.hpp  CircleParticle.hpp  CurvedLine.cpp  CurvedLine.hpp  GradientLine.hpp  MidiNoteControl.hpp  TimeEasing.hpp  TimedCursorPosition.hpp  TimedMessage.hpp
tools/: add_license_header.py  embedder.py
utils/: ChannelWorker.hpp  DebugCenter.hpp  EventFacadeApp.hpp  ImGuiFrameDiagnostics.hpp  LazyTexture.cpp  LazyTexture.hpp  Logger.hpp  MidiGenerator.hpp  ProfileMetics.hpp  RingBufferAverager.hpp  TaskQueue.hpp  ThreadPool.hpp  TimedAverager.hpp
vst/: EventFacadeVst.cpp  EventFacadeVst.hpp  VSTStateContext.hpp  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
vst/analysis/: AudioAnalyzer.hpp  FFTBuffer.hpp
vst/params/: VSTParamAssignmentMenu.hpp  VSTParamBindingManager.hpp
vst/views/: IVSTView.hpp  ViewFactory.hpp  Win32Helper.hpp  Win32TimerQueueView.hpp  Win32View.hpp  Win32WinImpl.hpp  X11View.hpp
